--- a/css/styles.css
+++ b/css/styles.css
@@ -494,9 +494,11 @@ img {
   position: fixed;
   top: 0;
   left: 0;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
   opacity: 0;
   visibility: hidden;
-  position: none;
+  pointer-events: none;
 }
 .is-open {
   opacity: 1;
@@ -515,6 +517,7 @@ img {
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
   padding: 72px 24px 24px 24px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-btn {
@@ -564,12 +567,16 @@ img {
   padding-top: 0px;
   margin-bottom: 16px;
 }
-.modal-input-wrap {
-  position: relative;
+
+.modal-field-wrap {
   margin-bottom: 8px;
 }
 
-.modal-lable {
+.modal-input-wrap {
+  position: relative;
+}
+
+.modal-label {
   display: block;
   margin-bottom: 4px;
   color: #8e8f99;
@@ -578,49 +585,54 @@ img {
   letter-spacing: 0.04em;
 }
 
+.modal-input {
+  width: 100%;
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  padding-left: 38px;
+  outline: transparent;
+  background-color: transparent;
+  border-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .input-icon {
   position: absolute;
   fill: #2e2f42;
   top: 50%;
   transform: translateY(-50%);
   left: 16px;
-  transition-property: fill;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input:hover + .input-icon,
 .modal-input:focus + .input-icon {
   fill: #4d5ae5;
 }
-.modal-input {
-  width: 100%;
-  height: 40px;
-  border-radius: 4px;
-  border: 1px solid rgba(46, 47, 66, 0.4);
-  padding-left: 34px;
-  outline: transparent;
-  transition-property: border;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
+
 .modal-input:hover,
 .modal-input:focus {
   border: 1px solid #4d5ae5;
+}
+
+.modal-comment-wrap {
+  margin-bottom: 16px;
 }
 
 .modal-comment {
   height: 120px;
   width: 100%;
   border-radius: 4px;
-  border: 1px solid var rgba(46, 47, 66, 0.4);
+  font-size: 12px;
+  line-height: 1.17em;
+  letter-spacing: 0.04em;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  color: rgba(46, 47, 66, 0.4);
   padding: 8px 16px;
-  margin-bottom: 16px;
   outline: transparent;
+  background-color: transparent;
   resize: none;
-  transition-property: border;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin-bottom: 16px;
 }
 
@@ -654,6 +666,7 @@ img {
 }
 
 .checkbox-visible {
+  display: inline-flex;
   width: 16px;
   height: 16px;
   border: 1px solid rgba(46, 47, 66, 0.4);
@@ -661,9 +674,10 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
-  transition-property: background-color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  fill: transparent;
+  background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .check-icon {
@@ -673,24 +687,28 @@ img {
 .policy-checkbox:checked + .check-text .checkbox-visible {
   background-color: #404bbf;
   border: none;
+  fill: #F4F4FD;
 }
 
 .modal-btn {
   display: block;
   margin: 0 auto;
   min-width: 169px;
-  height: 58px;
+  height: 56px;
+  font-family: "Roboto", sans-serif;
   border-radius: 4px;
   background-color: #4d5ae5;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   padding: 16px 32px;
-  color: #fff;
+  color: #ffffff;
   border: none;
   text-align: center;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5em;
   letter-spacing: 0.04em;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-info {
@@ -704,11 +722,9 @@ img {
   margin-bottom: 16px;
 }
 
-.contact-form-wrap {
+.contact-form {
   display: flex;
   gap: 24px;
-}
-.contact-form {
 }
 .input-email {
   width: 264px;
@@ -719,10 +735,14 @@ img {
   background-color: transparent;
   padding-left: 16px;
   color: #ffffff;
+  font-size: 12px;
+  font-size: 12px;
+  line-height: 2em;
+  letter-spacing: 0.04em;
 }
 
 .input-email::placeholder {
-  color: #fff;
+  color: #ffffff;
   font-size: 12px;
   line-height: 2em;
   letter-spacing: 0.04em;
@@ -732,19 +752,22 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 165px;
+  min-width: 165px;
   height: 40px;
   padding: 8px 24px;
-  gap: 16px;
+  font-family: "Roboto", sans-serif;
+
   border: none;
   border-radius: 4px;
   background: #4d5ae5;
-  color: #fff;
+  color: #ffffff;
   font-size: 16px;
   font-weight: 500;
-  line-height: 1.15em;
+  line-height: 1.5em;
   letter-spacing: 0.04em;
+  cursor: pointer;
 }
 .subscribe-icon {
   fill: #ffffff;
+  margin-left: 16px;
 }
