--- a/css/styles.css
+++ b/css/styles.css
@@ -633,7 +633,6 @@ img {
   background-color: transparent;
   resize: none;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  margin-bottom: 16px;
 }
 
 .modal-comment:hover,
@@ -648,6 +647,10 @@ img {
   letter-spacing: 0.04em;
 }
 
+.policy-wrap {
+  margin-bottom: 24px;
+}
+
 .policy-checkbox {
 }
 .check-text {
@@ -658,7 +661,6 @@ img {
   display: flex;
   align-items: center;
   gap: 8px;
-  margin-bottom: 24px;
 }
 .privacy-policy-link {
   color: #4d5ae5;
@@ -687,7 +689,7 @@ img {
 .policy-checkbox:checked + .check-text .checkbox-visible {
   background-color: #404bbf;
   border: none;
-  fill: #F4F4FD;
+  fill: #f4f4fd;
 }
 
 .modal-btn {
