--- a/css/styles.css
+++ b/css/styles.css
@@ -593,7 +593,7 @@ img {
   padding-left: 38px;
   outline: transparent;
   background-color: transparent;
-  border-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .input-icon {
@@ -677,7 +677,7 @@ img {
   align-items: center;
   justify-content: center;
   fill: transparent;
-  background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
