--- a/css/styles.css
+++ b/css/styles.css
@@ -660,7 +660,7 @@ img {
   letter-spacing: 0.04em;
   display: flex;
   align-items: center;
-  gap: 8px;
+  
 }
 .privacy-policy-link {
   color: #4d5ae5;
@@ -680,6 +680,7 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	 margin-right: 8px;
 }
 
 .check-icon {
