--- a/css/styles.css
+++ b/css/styles.css
@@ -669,6 +669,7 @@ img {
 
 .checkbox-visible {
   display: inline-flex;
+  position: relative;
   width: 16px;
   height: 16px;
   border: 1px solid rgba(46, 47, 66, 0.4);
